--- a/style.css
+++ b/style.css
@@ -127,3 +127,30 @@ body {
     background-image: url(./images/Choosen_active.svg);
     transition: 0.7;
 }
+.text {
+    font-size: 24px;
+    max-width: 260px;
+    text-align: center;
+    position: absolute;
+    color: white;
+    top: 200px; 
+    width: 260px;
+    height: 60px; 
+    left: 34,5px;
+    z-index: 1;
+    display: none;
+}
+.gallery__item::after {
+    content: "";
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.50);
+    width: 100%;
+    height: 100%;
+    color: white;
+    display: none;
+    
+}
+.gallery__item:hover::after,
+.gallery__item:hover .text {
+    display: block;
+}
